# apps_tools

./: .editorconfig  .gitignore  README.md  app_caches.py  catalog_linter.py  list_builder.py  list_long_term_broken_apps.py  maintenance.sh  pyproject.toml  requirements-ci.txt  requirements.txt  save_added_date.py
.github/workflows/: auto-lint.yml  tests_make_readme.yml
appslib/: utils.py
autopatches/: autopatch.py
autopatches/patches/add-cpe/: pr_body.md
autopatches/patches/add-schemas/: patch
autopatches/patches/auto-nodejs-ruby-go-composer-resources/: patch.sh  pr_body.md  pr_title.md
autopatches/patches/editorconfig/: patch  pr_body.md  pr_title.md
autopatches/patches/issue-and-pr-template/: patch  pr_body.md
autopatches/patches/missing-seteu-in-change_url/: patch
autopatches/patches/new-permission-system/: patch
autopatches/patches/simplify-reverse-proxy-params/: patch.py  patch.sh  pr_body.md  pr_title.md
autoupdate_app_sources/: autoupdate_app_sources.py  rest_api.py
helpers2.1/: convert_to_helpers_2.1.py  convert_to_nodejs_ruby_go_composer_resources.py
readme_generator/: README.md  README.md.j2  make_readme.py  nginx.conf  regen_readme_in_batch.py
readme_generator/templates/: ALL_README.md.j2  README.md.j2
readme_generator/tests/: README.md  test_make_readme.py
readme_generator/translations/cs/LC_MESSAGES/: messages.mo  messages.po
readme_generator/translations/eu/LC_MESSAGES/: messages.mo  messages.po
readme_generator/translations/tr/LC_MESSAGES/: messages.mo  messages.po
repos_management/: create_missing_labels.py  graveyard_and_archived_consistency.py  yunohost-bot_forks_cleanup.py
tools/: logos_check.py
update_app_levels/: update_app_levels.py
update_vulnerabilities_database/: README.md  cpe_list.diff  requirements.txt  update_vulnerabilities_database.py
webhooks/: webhook.py
